salesforce/force-app/main/default/objects/ScoreFormula__mdt/ScoreFormula__mdt.object-meta.xml
<CustomObject>
    <label>Score Formula</label>
    <pluralLabel>Score Formulas</pluralLabel>
</CustomObject>