salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Cat_Critical_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cat_Critical_Weight__c</fullName>
    <label>Category Critical Weight</label>
    <description>Points deducted from 100 per Critical finding when computing per-category bucket sub-scores. Vercel default 15. Independent of the headline weight so categories saturate faster than the org-level score.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>