salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Cat_Info_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cat_Info_Weight__c</fullName>
    <label>Category Info Weight</label>
    <description>Points deducted from 100 per Info finding in per-category bucket sub-scores. Vercel default 1.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>