salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Cat_Warning_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cat_Warning_Weight__c</fullName>
    <label>Category Warning Weight</label>
    <description>Points deducted from 100 per Warning finding in per-category bucket sub-scores. Vercel default 5.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>