salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Critical_Weight__c.field-meta.xml
<CustomField>
    <fullName>Critical_Weight__c</fullName>
    <label>Critical Weight</label>
    <description>Points deducted from 100 per Critical finding. Default 2.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>