salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Curve_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Curve_Coefficient__c</fullName>
    <label>Curve Coefficient</label>
    <description>Multiplier on sqrt(raw_penalty). Higher = steeper drop-off. Default 4.0 gives a pristine org ~95-100, healthy production ~70-85, messy ~40-60, broken ~10-30.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>