salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Info_Weight__c.field-meta.xml
<CustomField>
    <fullName>Info_Weight__c</fullName>
    <label>Info / Best Practice Weight</label>
    <description>Points deducted per Info ("Best Practice") finding. Default 0 — best practices are nudges, they don't ding the score.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>