salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Penalty_Cap__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Cap__c</fullName>
    <label>Penalty Cap</label>
    <description>Caps the raw weighted-sum penalty before the sqrt curve is applied. Prevents runaway finding counts from saturating the score at 0. Default 300.</description>
    <type>Number</type>
    <precision>7</precision>
    <scale>2</scale>
</CustomField>