salesforce/force-app/main/default/objects/ScoreFormula__mdt/fields/Warning_Weight__c.field-meta.xml
<CustomField>
    <fullName>Warning_Weight__c</fullName>
    <label>Warning Weight</label>
    <description>Points deducted from 100 per Warning finding. Default 1.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>